# lasso-sandbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  REVIEWERS.md  SECURITY.md  SPEC.md  TODO-next.md  TODO.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: architecture.md  dependencies.md  env-vars.md  network-egress.md  review-guide.md  supply-chain.md
docs/case-studies/: cve-2025-59536.md
docs/ci/: README.md  azure-pipelines.yml  github-actions.yml  gitlab-ci.yml
docs/compliance/: DORA-mapping.md  EU-AI-Act-mapping.md  README.md  banking-regulatory.md
docs/deployment/: air-gapped.md
docs/security/: audit-tamper-detection.md  database-ports.md  hardening-guide.md  key-management.md  secrets-management.md  threat-model.md
docs/workflows/: agent-guardrails-alignment.md  human-starts-lasso.md  windows-setup.md  windows-terminal.md
examples/profiles/: team-opencode.toml
examples/team-config/: README.md  lasso-config.toml  pyproject.toml
examples/team-config/.github/workflows/: validate.yml
examples/team-config/profiles/: team-development.toml  team-strict.toml
examples/team-config/scripts/: onboard.ps1  onboard.sh
examples/team-config/templates/: CLAUDE.md  opencode.json
lasso/: __init__.py  __main__.py
lasso/agents/: base.py  claude_code.py  guardrails_export.py  opencode.py  registry.py
lasso/agents/plugins/: opencode-lasso-plugin.js
lasso/auth/: __init__.py  github.py
lasso/backends/: __init__.py  base.py  converter.py  detect.py  docker_backend.py  image_builder.py
lasso/cli/: agents_cmds.py  audit_cmds.py  auth_cmds.py  checkpoints.py  config_cmds.py  constants.py  doctor.py  helpers.py  main.py  profiles.py  sandbox_cmds.py
lasso/config/: __init__.py  defaults.py  operational.py  profile.py  schema.py  sharing.py
lasso/core/: __init__.py  audit.py  audit_verify.py  checkpoint.py  commands.py  guardrails.py  network.py  sandbox.py  security_audit.py  state.py  webhooks.py
lasso/dashboard/: __init__.py  app.py  auth.py  filters.py  helpers.py  routes.py
lasso/dashboard/static/: app.js  style.css
lasso/dashboard/templates/: audit.html  base.html  check.html  index.html  login.html  profile_detail.html  profile_edit.html  profile_new.html  profiles.html  sandbox.html
lasso/profiles/: __init__.py
lasso/utils/: crypto.py  filelock.py  merge.py  paths.py
profiles/: README.md  agent-guardrails.md
scripts/: create-release.sh  lasso-launch.cmd
tests/: conftest.py  test_commands.py  test_sandbox_e2e.py
tests/integration/: conftest.py  test_container_security.py  test_docker_backend.py  test_team_opencode.py  test_user_workflows.py
tests/unit/: test_agent_providers.py  test_audit_rotation.py  test_audit_verify.py  test_auto_mount.py  test_backend_detect.py  test_backend_interface.py  test_checkpoint.py  test_cli.py  test_command_gate_properties.py  test_command_security.py  test_concurrency.py  test_crypto.py  test_dashboard.py  test_dashboard_auth.py  test_database_blocking.py  test_docker_from_docker.py  test_env_file.py  test_find_existing.py  test_github_auth.py  test_graceful_shutdown.py  test_guardrails.py  test_image_builder.py  test_image_builder_templates.py  test_network.py  test_network_enforcement.py  test_operational_config.py  test_profile_inheritance.py  test_profile_modes.py  test_profile_sharing.py  test_profile_to_container.py  test_quickstart_reset.py  test_risk_analysis_profile.py  test_sandbox_with_backend.py  test_security_audit.py  test_security_hardening_v031.py  test_session_volume.py  test_state_persistence.py  test_stopped_reconnect.py  test_team_bootstrap.py  test_webhooks.py  (+2 more)
(+6 files in other folders)
